LU-8846 lfs: try to unlink volatile file in lfs_migrate()

In lfs_migrate() try to unlink the volatile file in case the MDT does
not support volatile file creation.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I1e777c22ebde22e0c2080683a2b13650da7ebc7a
Reviewed-on: https://review.whamcloud.com/23842
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>